--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="menu-navigation">
         <img class="pie-logo" src="images/cake.svg" alt="icon-menu" />
         <ul class="home-menu">
           <li><a href="">Home</a></li>
@@ -18,71 +18,73 @@
         </ul>
       </nav>
     </header>
-    <section>
-      <div class="bethany-logo">
-        <img src="images/bethanylogo.png" alt="bethany-logo" />
-      </div>
-      <section class="pies-menu">
-        <h2>Browse our pies</h2>
-        <nav>
-          <ul>
-            <li><a href="">All pies</a></li>
-            <li><a href="">Cheese cakes</a></li>
-            <li><a href="">Fruit pies</a></li>
-            <li><a href="">seasonal pies</a></li>
-            <li><a href="">Promotions</a></li>
-          </ul>
-        </nav>
+    <div class="block-main">
+      <section class="logo-menu">
+        <div class="bethany-logo">
+          <img src="images/bethanylogo.png" alt="bethany-logo" />
+        </div>
+        <section class="title-pies">
+          <h2>Browse our pies</h2>
+          <nav>
+            <ul class="pies-menu">
+              <li><a href="">All pies</a></li>
+              <li><a href="">Cheese cakes</a></li>
+              <li><a href="">Fruit pies</a></li>
+              <li><a href="">seasonal pies</a></li>
+              <li><a href="">Promotions</a></li>
+            </ul>
+          </nav>
+        </section>
       </section>
-    </section>
-    <section class="bethany-page">
-      <h1>Welcome to Bethany´s Pie Shop</h1>
-      <figure>
-        <img src="images/bethany.jpg" alt="bethany" />
-        <figcaption>Bethany in her pie shop</figcaption>
-      </figure>
-      <section>
-        <article>
-          <h2>Our history</h2>
-          <p>
-            For many years, Bethany has been baking the most delicious pies at
-            her home. In 2013, we opened our first store
-          </p>
-          <p>
-            in Brussels (Belgium) in a cosy little street near the Grand Market.
-            People from all over the world fell in love
-          </p>
-          <p>
-            with the soft cakes, heavenly cheese cakes, spicy apple pies...The
-            store became a success in no time.
-          </p>
-          <p>
-            In 2015, no less than 100 pies were sold every day and Bethany's Pie
-            Shop moved into a larger building. After receiving many
-          </p>
-          <p>
-            requests, it became clear that our next step was making it possible
-            to order pies from the comfort of your own home and fromp
-          </p>
-          <p>
-            anywhere in the world. You are now looking at the result of this:
-            our very own webstore,
-          </p>
-          <p>
-            making it possible to order Bethany's delicious pies whenever you
-            feel like it!
-          </p>
-        </article>
-      </section>
-      <section>
-        <h2>Our weekly promotions</h2>
-        <h3>Cheese cake</h3>
+      <section class="bethany-page">
+        <h1>Welcome to Bethany´s Pie Shop</h1>
         <figure>
-          <figcaption>$ 12,95 - serves 4</figcaption>
-          <img src="images/products/cheesecakesmall.jpg" alt="cheescake" />
+          <img src="images/bethany.jpg" alt="bethany" />
+          <figcaption>Bethany in her pie shop</figcaption>
         </figure>
+        <section>
+          <article>
+            <h2>Our history</h2>
+            <p>
+              For many years, Bethany has been baking the most delicious pies at
+              her home. In 2013, we opened our first store
+            </p>
+            <p>
+              in Brussels (Belgium) in a cosy little street near the Grand
+              Market. People from all over the world fell in love
+            </p>
+            <p>
+              with the soft cakes, heavenly cheese cakes, spicy apple pies...The
+              store became a success in no time.
+            </p>
+            <p>
+              In 2015, no less than 100 pies were sold every day and Bethany's
+              Pie Shop moved into a larger building. After receiving many
+            </p>
+            <p>
+              requests, it became clear that our next step was making it
+              possible to order pies from the comfort of your own home and fromp
+            </p>
+            <p>
+              anywhere in the world. You are now looking at the result of this:
+              our very own webstore,
+            </p>
+            <p>
+              making it possible to order Bethany's delicious pies whenever you
+              feel like it!
+            </p>
+          </article>
+        </section>
+        <section class="cheesecake-block">
+          <h2>Our weekly promotions</h2>
+          <h3>Cheese cake</h3>
+          <figure>
+            <figcaption>$ 12,95 - serves 4</figcaption>
+            <img src="images/products/cheesecakesmall.jpg" alt="cheescake" />
+          </figure>
+        </section>
       </section>
-    </section>
+    </div>
     <footer>
       <p>Our address is</p>
       <address>Bethany´s Pie Shop - Bakery Street 555 Brussels Belgium</address>
